# Gemini

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  README.md  default.nix  flake.nix  plugin.json
.github/workflows/: makefile.yml
src/: Gemini.cpp  plugin.cpp  plugin.hpp
